--- a/app/src/main/res/layout/dialog_edit_food.xml
+++ b/app/src/main/res/layout/dialog_edit_food.xml
@@ -55,7 +55,7 @@
                         android:layout_height="wrap_content"
 
 
-                        android:textColor="@color/colorBalck"
+                        android:textColor="@color/colorBlack"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -64,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:textColor="@color/colorBalck" />
+                        android:textColor="@color/colorBlack" />
 
 
                 </LinearLayout>
@@ -102,7 +102,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="1"
-                        android:textColor="@color/colorBalck"
+                        android:textColor="@color/colorBlack"
                         android:textSize="16sp" />
 
                     <ImageView
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="18sp" />
 
                 <TextView
@@ -148,7 +148,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Eaten for : "
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="18sp" />
 
                 <Spinner
