--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="Calories burned: "
-            android:textColor="@color/colorBalck"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp" />
 
         <TextView
