--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
 
-                android:textColor="@color/colorBalck"
+                android:textColor="@color/colorBlack"
                 android:textSize="18sp" />
 
 
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Calories :"
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
                 <TextView
@@ -112,7 +112,7 @@
                     android:text="Protein : "
 
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
                 <TextView
@@ -121,7 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
 
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Fat (total):"
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
                 <TextView
@@ -155,7 +155,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -170,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Carbohydrate :"
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
                 <TextView
@@ -179,7 +179,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
 
