--- a/app/src/main/res/layout/fragment_listfood.xml
+++ b/app/src/main/res/layout/fragment_listfood.xml
@@ -3,9 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search"
+        android:queryHint="Search here">
+
+    </android.support.v7.widget.SearchView>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/search_view"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -14,8 +25,6 @@
             android:layout_alignParentStart="true"
             android:background="@color/colorWhite"
             android:orientation="vertical">
-
-            //code in here
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -35,8 +44,6 @@
     <RelativeLayout
         android:id="@+id/relayout_add_food"
         android:layout_width="match_parent"
-
-
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -81,7 +88,7 @@
                         android:layout_height="wrap_content"
 
 
-                        android:textColor="@color/colorBalck"
+                        android:textColor="@color/colorBlack"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -90,7 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:textColor="@color/colorBalck" />
+                        android:textColor="@color/colorBlack" />
 
 
                 </LinearLayout>
@@ -127,7 +134,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="1"
-                        android:textColor="@color/colorBalck"
+                        android:textColor="@color/colorBlack"
                         android:textSize="16sp" />
 
                     <ImageView
@@ -144,7 +151,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -172,7 +179,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Eaten for : "
-                    android:textColor="@color/colorBalck"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp" />
 
                 <Spinner
