--- a/app/src/main/res/layout/item_expandable_listview_child.xml
+++ b/app/src/main/res/layout/item_expandable_listview_child.xml
@@ -14,7 +14,7 @@
         android:background="@color/colorGray"
         android:drawableLeft="@drawable/settings_1"
         android:text="aaaaaaaaaaaaaa"
-        android:textColor="@color/colorBalck"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:drawableLeft="@drawable/time"
         android:paddingTop="5dp"
         android:text="aaaaaaaaaaaaaaaaaaa"
-        android:textColor="@color/colorBalck"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
     <TextView
@@ -36,7 +36,7 @@
         android:drawableLeft="@drawable/idea_24"
         android:paddingTop="5dp"
         android:text="aaaaaaaaaaaaaaa"
-        android:textColor="@color/colorBalck"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
     <TextView
@@ -47,7 +47,7 @@
         android:drawableLeft="@drawable/apple"
         android:paddingTop="5dp"
         android:text="a"
-        android:textColor="@color/colorBalck"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
 </LinearLayout>
