--- a/app/src/main/res/layout/item_mead_details.xml
+++ b/app/src/main/res/layout/item_mead_details.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:textColor="@color/colorBalck"
+                android:textColor="@color/colorBlack"
                 android:textSize="14sp" />
 
             <TextView
