--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="colorGray2">#d9d9d9</color>
     <color name="colorGray3">#e6e6e6</color>
     <color name="colorGrayText">#666666</color>
-    <color name="colorBalck">#000000</color>
+    <color name="colorBlack">#000000</color>
     <color name="colorOre">#ff7733</color>
     <color name="textDark">#3b3b3b</color>
     <color name="pink">#FF3399</color>
