--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/back_infomation"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -8,9 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
+
+            android:drawableLeft="@drawable/athlete"
+            android:background="@drawable/rounded_layout"
+            android:textStyle="bold"
+            android:textColor="@color/colorGreen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -20,94 +29,118 @@
             />
 
         <LinearLayout
+
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical">
 
             <TextView
+
+                android:background="@drawable/rounded_layout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="1"
-                android:text="Weight"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:text="   Weight :"
+                android:textColor="@color/colorGreen"
+                android:textSize="20sp" />
 
             <EditText
+                android:background="@drawable/rounded_layout"
                 android:id="@+id/edt_init_weight"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="right"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="60kg"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:textColor="@color/colorOre"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:paddingBottom="25dp"
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical">
 
             <TextView
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/rounded_layout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="1"
-                android:text="Height"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:text="   Height :"
+                android:textColor="@color/colorGreen"
+                android:textSize="20sp" />
 
             <EditText
+
+                android:background="@drawable/rounded_layout"
                 android:id="@+id/edt_init_height"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="right"
-                android:text="60kg"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="153cm"
+                android:textColor="@color/colorOre"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
+
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingBottom="26dp"
             android:gravity="center_vertical">
 
+
             <TextView
+                android:gravity="center_vertical"
+                android:background="@drawable/rounded_layout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="1"
-                android:text="Age"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:text="   Age :"
+                android:textColor="@color/colorGreen"
+                android:textSize="20sp" />
+
 
             <EditText
+                android:gravity="center"
+                android:background="@drawable/rounded_layout"
                 android:id="@+id/edt_init_age"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="right"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+
                 android:inputType="number"
-                android:text="18"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:text="20"
+                android:textColor="@color/colorOre"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingBottom="50dp"
             android:gravity="center_vertical">
 
             <TextView
+
+                android:background="@drawable/rounded_layout"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Gender"
-                android:textColor="@color/textDark"
-                android:textSize="16sp" />
+                android:layout_height="32dp"
+                android:layout_weight="1.45"
+                android:text="   Gender :"
+                android:textColor="@color/colorGreen"
+                android:textSize="20sp" />
 
             <RadioGroup
                 android:id="@+id/rg_init_gender"
@@ -119,21 +152,23 @@
                 android:textSize="16sp">
 
                 <RadioButton
+                    android:background="@drawable/rounded_layout"
                     android:id="@+id/rb_init_male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Male"
-                    android:textColor="@color/textDark"
+                    android:text="Male  "
+                    android:textColor="@color/colorOre"
                     android:textSize="16sp" />
 
                 <RadioButton
+                    android:background="@drawable/rounded_layout"
                     android:id="@+id/rb_init_female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:text="Female"
-                    android:textColor="@color/textDark"
+                    android:text="Female "
+                    android:textColor="@color/colorOre"
                     android:textSize="16sp" />
             </RadioGroup>
         </LinearLayout>
@@ -146,9 +181,11 @@
             android:orientation="horizontal">
 
             <Button
+                android:background="@drawable/rounded_layout"
                 android:id="@+id/btn_init_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorGreen"
                 android:text="Save" />
         </LinearLayout>
     </LinearLayout>
