--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,39 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Profile" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Home" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_workout"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Workout" />
+        <item
+            android:id="@+id/nav_meal"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Meal" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_exercise"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Exercise" />
+        <item
+            android:id="@+id/nav_statistic"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Statistic" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Information">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_class"
+                android:title="Lap trinh huong di dong nhom 4" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_group"
+                android:title="Thuc hien: Nhom 5" />
         </menu>
     </item>
 
