--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -41,6 +41,7 @@
             android:layout_weight="1"
             android:gravity="left"
             android:paddingLeft="10dp"
+            android:textColor="#FFFF4444"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -54,7 +55,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="150dp">
 
         <TextView
             android:id="@+id/tv_exercise_instruction"
