tạo bảng listpractice,

--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -21,7 +21,7 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/iv__plan_back_left"
+                android:id="@+id/iv_plan_back_left"
                 android:layout_width="0dp"
                 android:layout_height="24dp"
                 android:layout_weight="0.5"
@@ -51,90 +51,36 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="39dp"
-            android:background="@color/colorGray"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp">
+            android:layout_marginTop="5dp"
+            android:background="@color/colorGreen"
+            android:gravity="center_vertical">
 
-            <LinearLayout
+            <ImageView
 
-                android:layout_width="wrap_content"
-                android:layout_height="39dp"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/cacu" />
+
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Caculator"
+                android:textColor="@color/colorWhite"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="32dp"
-                        android:src="@drawable/kilograms" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="2dp"
-                        android:text="Weight : "
-                        android:textColor="@color/pink"
-                        android:textSize="17sp" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tv_plan_weight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="42kg"
-                    android:textColor="@color/pink"
-                    android:textSize="16sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <LinearLayout
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="39dp"
-                    android:gravity="center_vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="32dp"
-                            android:src="@drawable/height" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="2dp"
-                            android:text="Height : "
-                            android:textColor="@color/colorOre"
-                            android:textSize="17sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tv_plan_height"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="153cm"
-                        android:textColor="@color/colorOre"
-                        android:textSize="16sp" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
@@ -342,7 +288,7 @@
 
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="1"
 
 
                 android:textColor="@color/colorBlack"
@@ -430,7 +376,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="   Lunch   "
+                    android:text="    Lunch    "
                     android:textSize="15sp" />
 
                 <TextView
@@ -481,7 +427,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="   Dinner  "
+                    android:text="    Dinner   "
                     android:textSize="15sp" />
 
                 <TextView
@@ -531,7 +477,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="  Snack  "
+                    android:text="    Snack    "
                     android:textSize="15sp" />
 
                 <TextView
@@ -581,9 +527,7 @@
                 android:id="@+id/tv_plan_excer_2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-
-
+                android:layout_weight="1"
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp" />
 
